# cpp-ethereum

./: CMakeLists.txt  index.html
alethzero/: CMakeLists.txt
cmake/: EthCompilerSettings.cmake  EthDependencies.cmake
libdevcore/: CMakeLists.txt  FixedHash.cpp  FixedHash.h  SHA3.cpp  StructuredLogger.cpp  StructuredLogger.h  TrieCommon.cpp  TrieDB.cpp  TrieHash.cpp  debugbreak.h  vector_ref.h
libdevcrypto/: CMakeLists.txt  OverlayDB.cpp
libethereum/: Client.h  Interface.h  Transaction.h
libevm/: VM.cpp
libevmasm/: AssemblyItem.h  CommonSubexpressionEliminator.cpp  CommonSubexpressionEliminator.h  ExpressionClasses.cpp  ExpressionClasses.h  GasMeter.cpp  GasMeter.h  SourceLocation.h
libsolidity/: ASTPrinter.cpp  ASTPrinter.h  StructuralGasEstimator.cpp  StructuralGasEstimator.h
libtestutils/: Common.cpp
mix/: CodeModel.h
solc/: CMakeLists.txt  CommandLineInterface.cpp  README.md  jsonCompiler.cpp
test/: GasMeter.cpp
test/libsolidity/: SolidityOptimizer.cpp  SolidityWallet.cpp
